RESOLVED FIXED204684
WebDriver: handle no such element errors
https://bugs.webkit.org/show_bug.cgi?id=204684
Summary WebDriver: handle no such element errors
Carlos Garcia Campos
Reported 2019-11-28 08:37:25 PST
We are currently considering all errors as stale element when we can't find an element. This is causing several test failures: imported/w3c/webdriver/tests/get_element_tag_name/get.py::test_element_not_found imported/w3c/webdriver/tests/get_element_property/get.py::test_element_not_found imported/w3c/webdriver/tests/get_element_attribute/get.py::test_element_not_found
Attachments
Patch (12.26 KB, patch)
2019-11-28 08:43 PST, Carlos Garcia Campos
bburg: review+
Carlos Garcia Campos
Comment 1 2019-11-28 08:43:01 PST
Blaze Burg
Comment 2 2020-01-06 16:48:54 PST
Comment on attachment 384458 [details] Patch r=me
Carlos Garcia Campos
Comment 3 2020-01-07 01:55:46 PST
Radar WebKit Bug Importer
Comment 4 2020-01-07 01:56:19 PST
Carlos Garcia Campos
Comment 5 2020-01-08 03:18:11 PST
*** Bug 180413 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.