WebDriver: handle no such element errors https://bugs.webkit.org/show_bug.cgi?id=204684

Reviewed by Brian Burg.

Source/WebDriver:

Handle InvalidNodeIdentifier errors.

Fixes: imported/w3c/webdriver/tests/get_element_tag_name/get.py::test_element_not_found
       imported/w3c/webdriver/tests/get_element_property/get.py::test_element_not_found
       imported/w3c/webdriver/tests/get_element_attribute/get.py::test_element_not_found

* CommandResult.cpp:
(WebDriver::CommandResult::CommandResult):

Source/WebKit:

Add InvalidNodeIdentifier to be generated when the elementID provided by WebDriver is not a valid node identifier.

* UIProcess/Automation/Automation.json: Add InvalidNodeIdentifier error.
* WebProcess/Automation/WebAutomationSessionProxy.cpp:
(WebKit::isValidNodeHandle): Helper function to check the given node handle is valid.
(WebKit::isValidNodeIdentifier): JavaScript callback function to check the node identifier is valid.
(WebKit::WebAutomationSessionProxy::scriptObjectForFrame): Add isValidNodeIdentifier function.
(WebKit::WebAutomationSessionProxy::evaluateJavaScriptFunction): Handle InvalidNodeIdentifier errors.
(WebKit::WebAutomationSessionProxy::resolveChildFrameWithNodeHandle): Call isValidNodeHandle() and generate
InvalidNodeIdentifier error if it fails.
(WebKit::WebAutomationSessionProxy::computeElementLayout): Ditto.
(WebKit::WebAutomationSessionProxy::selectOptionElement): Ditto.
(WebKit::WebAutomationSessionProxy::takeScreenshot): Ditto.
* WebProcess/Automation/WebAutomationSessionProxy.js:
(let.AutomationSessionProxy.prototype._nodeForIdentifier): Call isValidNodeIdentifier() and throw
InvalidNodeIdentifier if it fails.

Canonical link: https://commits.webkit.org/218986@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254118 268f45cc-cd09-0410-ab3c-d52691b4dbfc